<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="vedio_description">Tip ：Select and click the media resources, then they can play on the TV.</string>
    <string name="video">Videos</string>
    <string name="add_list">CREATE PLAYLIST</string>
    <string name="devide">-</string>
    <string name="playlistname">Playlist name</string>
    <string name="playlist_operate">Playlist Operate</string>
    <string name="playlistcomment_pre"></string>
    <string name="playlistcomment_end">" "songs</string>
    <string name="playlist_nameexist">Name already exists</string>
    <string name="playlist_comfirmdel">Confirm Deletions?</string>
    <string name="playlist_createfile_failed">Fail to create file</string>
    <string name="PlayList_play">play</string>
    <string name="music_view_playlist">playlist</string>
    <string name="playlist_del">Delete</string>
    <string name="whatdoyouwanttodo">What do you want to do？</string>
    <string name="PlayList_modify">Modify</string>
    <string name="byplaylist">by playlist</string>
    <string name="byspecial">by special</string>
    <string name="nametoolong">The name is too long, please rename it</string>
    <string name="filenotfound">File not found！</string>
    <string name="share">share</string>
    <string name="share_title">STB SUIT</string>
    <string name="disconnected">NO STB</string>
    <string name="single">Single</string>
    <string name="singer">Singer</string>
    <string name="songlist">Playlist</string>
    <string name="music">Music</string>
    <string name="cancel_projection">Cancel projection</string>
    <string name="cancel">cancel</string>
    <string name="upslide_began_to_projection">Share it on TV</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="scaling_pictures">Pictures Scaling</string>
    <string name="album_name">Album name</string>
    <string name="nullsong">0 song</string>
    <string name="picture_no">" Images"</string>
    <string name="duration">"DUR"</string>
    <string name="connect_wifi">Please connect wireless network!</string>
    <string name="get_video_failed">Failed to get video</string>
    <string name="phone_disconnect">Make sure mobile is connected to TV and project again.</string>
    <string name="get_image_failed">Sorry, fail to get the pictures</string>
    <string name="share_image_tag">There is a beautiful picture and share it with you</string>
    <string name="no_sdcard">No sdcard</string>
    <string name="loading">Loading,please wait</string>
    <string name="send_pdf_failed">Fail to project PDF file to STB</string>
    <string name="get_pdf_failed">Fail to get the PDF file</string>
    <string name="total"> </string>
    <string name="space_total">"     "</string>
    <string name="song_unit">" "songs</string>
    <string name="share_song_tag">share a nice song to you，</string>
    <string name="album">album</string>
    <string name="song_name">song name</string>
    <string name="get_music_failed">Error in song acquisition</string>
    <string name="enter_the_playlist_name">Please input a playlist name</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="confirm_space">OK</string>
    <string name="cancel_space">Cancel</string>
    <string name="didnot_enter_any_information">Information can not be empty</string>
    <string name="videos_no">videos</string>
    <string name="music_alert_input">Enter Playlist Name</string>
    <string name="pictures">Pictures</string>
    <string name="videos">Videos</string>
    <string name="nnext">Next</string>
    <string name="skip">Skip</string>
    <string name="all_songs">All songs</string>
    <string name="artists">Artists</string>

</resources>