<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
    <RelativeLayout
            android:id="@+id/top_linear"
            android:background="@drawable/title_banner"
            android:layout_height="67.6dip"
            android:layout_width="fill_parent"
            android:focusable="false"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/pic_continue_show"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="20sp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/cancel"/>
        <Button 
		    android:id="@+id/bt_sharepic"
		    android:layout_width="40dp"
		    android:layout_height="40dp"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
		    android:layout_marginRight="8dp"
		    android:background="@drawable/btn_shar_stroke"
		    android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/white"
		    android:text="@string/share"
	    />
    </RelativeLayout>


    <ViewFlipper
            android:id="@+id/image_flipper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="70dip"
            android:layout_marginBottom="65dip"
            >

    </ViewFlipper>

    <LinearLayout
            android:id="@+id/bottom_linear"
            android:background="@drawable/title_banner"
            android:layout_height="60dip"
            android:layout_width="fill_parent"
            android:layout_alignParentBottom="true"
            android:focusable="false"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal">
        <ImageView
                android:id="@+id/rotation_left"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:background="@drawable/picture_rotation_left"
                />
        <ImageView
                android:id="@+id/rotation_right"
                android:layout_marginLeft="120dp"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:background="@drawable/picture_rotation_right"
                />
    </LinearLayout>


    <RelativeLayout
            android:id="@+id/gesture_layout"
            android:layout_below="@id/top_linear"
            android:layout_above="@id/bottom_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <ImageView
                android:id="@+id/gesture_up"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/gesture_up"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                />
        <TextView
                android:id="@+id/text_up"
                android:text="@string/upslide_began_to_projection"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="160dp"
                android:layout_below="@id/gesture_up"
                />
        <ImageView
                android:id="@+id/gesture_left"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:background="@drawable/gesture_right"
                android:layout_gravity="left"/>
        <TextView
                android:id="@+id/text_left"
                android:layout_below="@id/gesture_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                android:textSize="12sp"
                android:layout_marginLeft="50dp"
                android:textColor="@color/white"
                android:layout_gravity="left"/>

        <ImageView
                android:id="@+id/gesture_right"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:background="@drawable/gesture_left"
                android:layout_marginRight="40dp"
                android:layout_alignParentRight="true"
                />
        <TextView
                android:id="@+id/text_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gesture_right"
                android:text="@string/next"
                android:textSize="12sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50dp"
                android:textColor="@color/white"
                />

        <TextView
                android:id="@+id/text_scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scaling_pictures"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginBottom="80dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                />

        <ImageView
                android:id="@+id/gesture_scale"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/gesture_room"
                android:layout_centerHorizontal="true"
                android:layout_above="@id/text_scale"
                />
    </RelativeLayout>
</RelativeLayout>