<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/tv_ime_bg" >

    <TextView
        android:id="@+id/tv_modifydia_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dialog_title_margintop"
        android:singleLine="true"
        android:text="@string/whatdoyouwanttodo"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="@dimen/dialog_title_textsize" />

    <ImageView
        android:id="@+id/iv_modifydia_dilver"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_below="@id/tv_modifydia_title"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_blue_light" />
<!-- 暂时无用，备用内容 -->
    <ScrollView
        android:id="@+id/sc_modifydia_content"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_below="@id/iv_modifydia_dilver" >

        <TextView
            android:id="@+id/tv_modifydia_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:singleLine="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_content_textsize" />
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dialog_btn_marginBottom" >

        <Button
            android:id="@+id/bt_modifydia_delete"
            android:layout_width="@dimen/dialog_modifybtn_width"
            android:layout_height="@dimen/dialog_modifybtn_height"
            android:background="@drawable/btn_notext"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/playlist_del"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_btn_textsize" />

        <Button
            android:id="@+id/bt_modifydia_modify"
            android:layout_width="@dimen/dialog_modifybtn_width"
            android:layout_height="@dimen/dialog_modifybtn_height"
            android:layout_alignTop="@id/bt_modifydia_delete"
            android:layout_marginRight="@dimen/dialog_modifybtn_marginLeftright"
            android:layout_toLeftOf="@id/bt_modifydia_delete"
            android:background="@drawable/btn_notext"
            android:gravity="center"
            android:src="@drawable/btn_notext"
            android:text="@string/PlayList_modify"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_btn_textsize" />
        <Button
            android:id="@+id/bt_modifydia_cancel"
            android:layout_width="@dimen/dialog_modifybtn_width"
            android:layout_height="@dimen/dialog_modifybtn_height"
            android:layout_alignTop="@id/bt_modifydia_delete"
            android:layout_marginLeft="@dimen/dialog_modifybtn_marginLeftright"
            android:layout_toRightOf="@id/bt_modifydia_delete"
            android:background="@drawable/btn_notext"
            android:gravity="center"
            android:src="@drawable/btn_notext"
            android:text="@string/cancel_space"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_btn_textsize" />
    </RelativeLayout>

</RelativeLayout>