<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  
    android:orientation="vertical"
    android:background="@drawable/music_body"
    tools:context=".TVRemoteControlActivity" >

    <!-- title -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="67.6dip"
        android:background="@drawable/music_title"
        android:focusable="false"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:background="@drawable/das_title_back" 
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/music"
            android:textSize="20sp" 
            android:textColor="@color/white"
            android:layout_marginLeft="16dip"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    

    <!-- body -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="67.6dip"
        android:focusable="false"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >
     
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        
            <TextView
                android:id="@+id/music_category_all"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/single"
                android:textColor="@color/orange"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                />
                
            <ImageView android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/music_category_deliver"/>

            <TextView
                android:id="@+id/music_category_specail"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/singer"
                android:textColor="@color/Grey_500"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                />

           <ImageView android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/music_category_deliver"/>

            <TextView
                android:id="@+id/music_category_playlist"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/songlist" 
                android:textColor="@color/Grey_500"             
                android:textAppearance="?android:attr/textAppearanceMedium" 
                />
        
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/music_title_body_deliver" />

        <FrameLayout
            android:id="@+id/realtabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             />
    </LinearLayout>

</RelativeLayout>