<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    android:orientation="vertical"
    tools:context=".TVRemoteControlActivity" >

    <!-- IP选择 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="67.6dip"
        android:background="@drawable/title_banner"
        android:focusable="false"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title"
            android:layout_width="80dip"
            android:layout_height="64.3dip"
            android:ellipsize="marquee"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/disconnected"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="16.7dip"
            android:layout_height="10.7dip"
            android:layout_gravity="center_vertical"
            android:background="@drawable/title_ip_select" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="80.5dip"
        android:layout_height="77.3dip"
        android:layout_marginLeft="0dip"
        android:background="@drawable/title_btn_back_selector" />

    <!-- 中间内容 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="67.6dip"
        android:focusable="false"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >
        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#FFFFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#FFFFFFFF" />
            <TextView
                android:id="@+id/music_category_all"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/single"
                android:textColor="@color/orange"
                android:background="@drawable/channel_titlebg"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#FFFFFFFF" />

            <TextView
                android:id="@+id/music_category_specail"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/singer"
                android:background="@drawable/channel_titlebg"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#FFFFFFFF" />

            <TextView
                android:id="@+id/music_category_playlist"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/songlist"
                android:background="@drawable/channel_titlebg"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                />
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#FFFFFFFF" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#FFFFFFFF" />

        <FrameLayout
            android:id="@+id/realtabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <!-- IP选择 -->

    <ListView
        android:id="@+id/clients"
        android:layout_width="match_parent"
        android:layout_height="558dip"
        android:layout_marginTop="67.6dip"
        android:background="@drawable/title_ip_list_bg"
        android:listSelector="@drawable/title_ip_list"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_list"
        android:layout_width="204dip"
        android:layout_height="49.8dip"
        android:layout_marginLeft="70dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/title_btn_list_selector" />

</RelativeLayout>